# gitgenie

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitgenie/: __init__.py  cli.py  commit_analyzer.py  git_utils.py  llm_client.py  pr_generator.py
tests/: test_get_staged_changes.py  test_git_utils.py  test_llm_client.py
